// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImngPrimeODataTableDirective should fire OnInit 1`] = `
MockTable {
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "lazy": true,
  "loading": false,
  "onFilter": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [],
    "thrownError": null,
  },
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle lazyload 1`] = `
MockTable {
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "globalFilterFields": [
    "xyz",
  ],
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onFilter": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [],
    "thrownError": null,
  },
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle lazyload no filters 1`] = `
MockTable {
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onFilter": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [],
    "thrownError": null,
  },
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle lazyload no sorting 1`] = `
MockTable {
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "lazy": true,
  "loading": false,
  "multiSortMeta": [],
  "onFilter": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [],
    "thrownError": null,
  },
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle tableState Changes 1`] = `
MockTable {
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "filters": {
    "xyz": [
      {
        "matchMode": "contains",
        "operator": "and",
        "value": "💩💩",
      },
    ],
  },
  "first": 20,
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onFilter": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [],
    "thrownError": null,
  },
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rows": 20,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle tableState Changes no filters 1`] = `
MockTable {
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "first": 20,
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onFilter": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [],
    "thrownError": null,
  },
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rows": 20,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle tableState Changes no sorting 1`] = `
MockTable {
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "filters": {
    "xyz": [
      {
        "matchMode": "contains",
        "operator": "and",
        "value": "💩💩",
      },
    ],
  },
  "first": 20,
  "lazy": true,
  "loading": false,
  "multiSortMeta": [],
  "onFilter": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [],
    "thrownError": null,
  },
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rows": 20,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;
